# candle-pytorch-parity-testing

./: README.md
bert-embeddings/: README.md
bert-embeddings/candle/: Cargo.toml  README.md
bert-embeddings/candle/src/: main.rs
bert-embeddings/pytorch/: README.md  main.py
candle-embeddings/: README.md
candle-embeddings/src/: main.rs
pytorch-embeddings/: README.md  main.py
xlm-roberta-finetuned/: README.md  troubleshooting.md
xlm-roberta-finetuned/candle/: .gitignore  Cargo.toml  README.md
xlm-roberta-finetuned/candle/src/: main.rs
xlm-roberta-finetuned/pytorch/: .gitignore  README.md  main.py  requirements.txt
