[package]
name = "xlm-roberta-candle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
clap = { version = "4.4", features = ["derive"] }
hf-hub = "0.3.2"
tokenizers = { version = "0.15.0", features = ["http"] }
serde_json = "1.0"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
