[package]
name = "xlm-roberta-candle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
# Using specific commit to ensure reproducibility
candle-core = "0.9.1"
candle-transformers = "0.9.1"
candle-nn = "0.9.1"
clap = { version = "4.4", features = ["derive"] }
hf-hub = "0.3.2"
tokenizers = { version = "0.15.0", features = ["http"] }
serde_json = "1.0"